2013-05-08  Thomas Mattison  <mattison <at> phas.ubc.ca>

	* src/fit.c (marquardt):  Zero-change in chisquare is now "BETTER"
	rather than "WORSE" to avoid extra iterations which would only
	increase lambda.

2013-05-08  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/fit.c|h src/save.c src/set.c src/show.c:  The command which can be
	executed by fit when it is interrupted can be changed with
	`set fit script`.

	* src/fit.c src/stdfun.c|h docs/gnuplot.doc:  Print p-value of the
	chisquare distribution.  Saved to user variable FIT_P.

	* src/fit.c (fit_command):  Discard data which contains NaN.  Necessary
	since df_readline() does not return DF_UNDEFINED in that case.  Now
	excluding data from the fit works the same for expressions with e.g. 1/0
	and NaN.

	* src/fit.c (pack_float):  Do not try to dereference NULL result from
	strchr().

	* src/fit.c (fit_command):  New user variable GPVAL_LAST_FIT.

	* src/fit.c (call_gnuplot):  Print useful info on undefined-function
	error. Derived from patchset #230 by Thomas Mattison.

	* src/config/msvc/Makefile:  MSVC does not have isblank() so use
	isspace() instead.

2013-05-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (replotrequest):  Do not trust is_3d_plot as an 
	indicator of whether a replot request should be 2d or 3d; instead 
	check the command itself to see if it is "splot ..." or "plot ...".
	Bug #1235

	* src/qtterminal/QtGnuplotScene.cpp:  fillbox(FS_EMPTY, ...) should
	draw in background color, not necessarily white.

	* demo/html/webify_canvas.pl term/canvas.trm term/js/gnuplot_mouse.js:
	Do not redraw a plot canvas on mouseover if no intervening plot canvas
	has been drawn since the mouse left.  This prevents unnecessary redraws
	if the mouse leaves and then immediately reenters.
	Bug #1220

2013-05-05  Dima Kogan  <dima@secretsauce.net>

	* src/gplt_x11.c src/gplt_x11.h term/x11.trm:
	Previously it was possible for gnuplot to call display() before all