@@ -6,12 +6,14 @@
 
 2013-05-08  Bastian Maerkisch  <bmaerkisch@web.de>
 
+	* src/fit.c|h:  Cleanup declarations.
+
 	* src/fit.c|h src/save.c src/set.c src/show.c:  The command which can be
 	executed by fit when it is interrupted can be changed with
 	`set fit script`.
 
-	* src/fit.c src/stdfun.c|h docs/gnuplot.doc:  Print p-value of the
-	chisquare distribution.  Saved to user variable FIT_P.
+	* src/fit.c src/stdfun.c|h docs/gnuplot.doc:  Print p-value of the fit
+	according to the chisquare-distribution.  Saved to user variable FIT_P.
 
 	* src/fit.c (fit_command):  Discard data which contains NaN.  Necessary
 	since df_readline() does not return DF_UNDEFINED in that case.  Now
